--- a/Sample_04.html
+++ b/Sample_04.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-</head>
-<body>
-	<h2>球技一覧</h2>
-	<ul>
-		<li>野球</li>
-		<li>サッカー</li>
-	</ul>
-</body>
+  <head>
+    <meta charset="utf-8" />
+  </head>
+  <body>
+    <h2>球技一覧</h2>
+    <ul>
+      <li>野球</li>
+      <li>サッカー</li>
+      <li>バスケットボール</li>
+    </ul>
+  </body>
 </html>
